# lab_os

./: .gitignore
app/: child_main.cpp  parent_main.cpp
course project/: CMakeLists.txt
course project/include/: GameClient.h  GameMessages.h  GameServer.h  NumberLogic.h  PosixPipe.h  exceptions.h
course project/src/client/: GameClient.cpp  main_client.cpp
course project/src/common/: GameMessages.cpp  NumberLogic.cpp  PosixPipe.cpp
course project/src/server/: GameServer.cpp  main_server.cpp
include/: os.h
lab1/: CMakeLists.txt  report1.tex
lab1/include/: child.h  parent.h
lab1/src/: child.cpp  os.cpp  os_win.cpp
lab1/texsrc/: titlepage.tex
lab2/: CMakeLists.txt  main.cpp  report.tex
lab2/include/: exceptions.h  threads.h
lab2/src/: threads.cpp
lab2/styles/: log-style.sty
lab2/texsrc/: conclusions.tex  description.tex  method.tex  problem.tex  result.tex  titlepage.tex
lab3/: CMakeLists.txt
lab3/app/: child_main.cpp  parent_main.cpp
lab3/include/: child.h  os.h  parent.h
lab3/src/: child.cpp  os.cpp  parent.cpp
lab3/styles/: log-style.sty
lab3/texsrc/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab4/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp  repost.tex
lab4/include/: functions.h
lab4/src/: gcf_euclid.cpp  gcf_naive.cpp  square_rect.cpp  square_triangle.cpp
lab4/texsrc/: benchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab5/: report.tex
lab5/texsrc/: problem.tex  src.tex  thinks.tex  titlepage.tex
src/: parent.cpp
styles/: log-style.sty
texsrc/: benchmark.tex  problem.tex  src.tex  thinks.tex
